--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,11 +3,21 @@ activity-compose = "1.9.0-alpha03"
 foundation = "1.7.0-alpha02"
 material = "1.7.0-alpha02"
 navigation-compose = "2.8.0-alpha02"
+ui-tooling-preview = "1.7.0-alpha02"
+ui-tooling = "1.7.0-alpha02"
+junit = "4.13.2"
+core = "1.6.0-alpha05"
+androidx-junit = "1.2.0-alpha03"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 androidx-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
+androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview", version.ref = "ui-tooling-preview" }
+androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "ui-tooling" }
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-junit" }
 
 [plugins]
