--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ core = "1.6.0-alpha05"
 androidx-junit = "1.2.0-alpha03"
 animation = "1.7.0-alpha02"
 coil-compose = "2.5.0"
+ui-util = "1.7.0-alpha02"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
@@ -23,5 +24,6 @@ androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-junit" }
 androidx-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "animation" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil-compose" }
+androidx-ui-util = { group = "androidx.compose.ui", name = "ui-util", version.ref = "ui-util" }
 
 [plugins]
