--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,36 +1,23 @@
 [versions]
-agp = "8.1.4"
-kotlin = "1.9.22"
-androidx-compose-compiler = "1.5.8"
-compose-full = "1.6.0"
-material = "1.12.0-alpha03"
-activity-compose = "1.9.0-alpha03"
-kotlinx-coroutines-core = "1.8.0"
-koin-core = "3.6.0-wasm-alpha2"
-koin-compose = "3.6.0-wasm-alpha2"
-precompose = "1.6.0-beta02"
-koin-android = "3.6.0-wasm-alpha2"
-koin-androidx-compose = "3.6.0-wasm-alpha2"
-ktor-client-core = "3.0.0-beta-1"
-buildKonfig = "0.13.3"
+agp = "8.2.2"
+kotlin = "1.9.20"
+compose = "1.5.4"
+compose-compiler = "1.5.4"
+compose-material3 = "1.1.2"
+androidx-activityCompose = "1.8.0"
 
 [libraries]
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
-kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
-koin-core = { group = "io.insert-koin", name = "koin-core", version.ref = "koin-core" }
-koin-compose = { group = "io.insert-koin", name = "koin-compose", version.ref = "koin-compose" }
-precompose = { group = "moe.tlaster", name = "precompose", version.ref = "precompose" }
-koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin-android" }
-koin-androidx-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin-androidx-compose" }
-ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor-client-core" }
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
+compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-nativeCocoapod = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
-kotlinX-serialization-plugin = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-composeFull = { id = "org.jetbrains.compose", version.ref = "compose-full" }
-buildKonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildKonfig" }
+kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
