--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ constraintlayout = "2.2.0-alpha13"
 navigationFragmentKtx = "2.8.0-alpha03"
 navigationUiKtx = "2.8.0-alpha03"
 coreKtxVersion = "1.13.0-alpha05"
-splittiesViewsDsl = "3.0.0"
+splitties = "3.0.0"
 preferenceKtx = "1.2.1"
 splittiesResources = "3.0.0"
 dependency = "0.1.2"
@@ -42,7 +42,9 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
-splitties-views-dsl = { group = "com.louiscad.splitties", name = "splitties-views-dsl", version.ref = "splittiesViewsDsl" }
+splitties-views-dsl = { group = "com.louiscad.splitties", name = "splitties-views-dsl", version.ref = "splitties" }
+splitties-views-dsl-constraintlayout = { module = "com.louiscad.splitties:splitties-views-dsl-constraintlayout", version.ref = "splitties" }
+splitties-views-dsl-coordinatorlayout = { module = "com.louiscad.splitties:splitties-views-dsl-coordinatorlayout", version.ref = "splitties" }
 androidx-preference-ktx = { group = "androidx.preference", name = "preference-ktx", version.ref = "preferenceKtx" }
 splitties-resources = { group = "com.louiscad.splitties", name = "splitties-resources", version.ref = "splittiesResources" }
 dependency = { group = "org.mechdancer", name = "dependency", version.ref = "dependency" }
@@ -52,6 +54,7 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version = "1.3.2" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
